@@ -1,3 +1,4 @@
+* Add setup indexes method to ModelSQL
 * Support getting many sequences at once
 * Add sequence_nextval function to Database
 * Retrieve groups of actions without checking access (#13506)
